k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-api
spec:
  hosts:
    - "*"
  gateways:
    - taste-food
  http:
    - match:
        - uri:
            exact: /payment
        - uri:
            prefix: /payment/
      rewrite:
        uri: /
      route:
        - destination:
            host: payment-api.default.svc.cluster.local
            port:
              number: 80
